--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	</head>
 	<body>
 		<!-- BEGIN EDITABLE CODE -->
-		<h1>Dog</h1>
+		<h1>Animal</h1>
+		<p>This is a paragraph.</p>
+		<a href="https://www.google.com/">Google</a>
 		<!-- END EDITABLE CODE -->
 	</body>
 </html
