Change color of heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<!-- BEGIN EDITABLE CODE -->
-		<h1>Animal</h1>
+		<h1 style="color: green;">Animal</h1>
 		<p>This is a paragraph.</p>
 		<br>
 		<br>
