Add background color

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html>
 	<head>
 	</head>
-	<body>
+	<body style="background-color: blue;">
 		<!-- BEGIN EDITABLE CODE -->
-		<h1 style="color: green;">Animal</h1>
+		<h1 style="color: green; background-color: red;">Animal</h1>
 		<p>This is a paragraph.</p>
 		<br>
 		<br>
