--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<body style="background-color: blue;">
 		<!-- BEGIN EDITABLE CODE -->
 		<h1 style="color: green; background-color: red;">Animal</h1>
-		<p>This is a paragraph.</p>
+		<p style="text-align: left">This is a paragraph.</p>
+		<p style="text-align: center">This is a paragraph.</p>
+		<p style="text-align: right">This is a paragraph.</p>
+		<br>
+		<p style="text-align: justify">This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
 		<br>
 		<br>
 		<br>
