Add button at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
 		<a href="https://www.google.com/">Google</a>
+		<br>
+		<br>
+		<button>Animal</button>
 		<!-- END EDITABLE CODE -->
 	</body>
 </html
